feat(HTMLeCSS): adicionar exercicio da caixa e outros.

--- a/modulos/modulo-03-HTML-e-CSS/site-street-fighter/index.html
+++ b/modulos/modulo-03-HTML-e-CSS/site-street-fighter/index.html
@@ -14,7 +14,7 @@
             <li><a href="index.html">Início</a></li>
             <li><a href="https://www.google.com.br/?gfe_rd=cr&ei=veMIWNTyM9DK8ge0mIrIDQ#q=street+fighter&tbm=nws">Notícias</a></li>
             <li><a href="ficha-tecnica.html">Ficha Técnica</a></li>
-            <li><a href="#">Sobre</a></li>
+            <li><a href="sobre.html">Sobre</a></li>
         </ul>
         </div>
 
@@ -47,6 +47,7 @@
                 1985 com gráficos impressionantes (para a época) e cheio de detalhes nos cenários. Vendo o sucesso de ambos
                 os games, a Capcom decidiu lançar seu próprio jogo que tivesse características de ambos os jogos. Assim nasceu
                 Street Fighter.</p>
+            <br>    
             <hr>
             <h2 id="jogos">Jogos da Série</h2>
 
